# algo_homework1

./: .gitignore  CMakeLists.txt  README.md  Student.h  reader_csv.cpp
Debug/: results.csv
task2/: V2_1.cpp  V2_2.cpp  V2_3.cpp  VariantBase.h  memory_usage.h  plot_results.py  results.csv  test2.cpp
task3/: radix_sort.cpp  test3.cpp
